--- a/src/components/iList/index2.css
+++ b/src/components/iList/index2.css
@@ -2,19 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
+} */
+/*
 html {
   font-size: 22px;
 }
 
-body {
-  min-height: 100vh;
-  font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+
 
 .App {
   display: flex;
@@ -37,7 +31,37 @@ header {
   justify-content: space-between;
   align-items: center;
 } */
+/* body {
+  min-height: 100vh;
+  font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+} */
 
+main {
+  padding: 1rem;
+  border: 1px solid rgba(0, 128, 128, 0.5);
+  border-radius: 5px;
+  background-color: blue;
+  max-height: 100%;
+  /* width: 100%; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* flex-grow: 1; */
+  /* justify-content: flex-start; */
+  /* align-items: center; */
+  overflow-y: auto;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0.25em;
+  background-color: teal;
+  color: aliceblue;
+}
 /* Loading animation */
 .loadingParent {
   color: mediumblue;
@@ -111,25 +135,7 @@ header {
 
 /* end loading animation */
 
-/* main {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  justify-content: flex-start;
-  align-items: center;
-  overflow-y: auto;
-} */
-
-/* footer {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 0.25em;
-  background-color: mediumblue;
-  color: aliceblue;
-}
-
+/* 
 ul {
   width: 100%;
   list-style: none;
