--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,3 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+*,
+*::before,
+*::after {
+  color: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+}
+
+body {
+  font-family: Poppins;
+}
+
 .backdrop {
   width: 100%;
   height: 100%;
@@ -14606,6 +14621,14 @@
 
 .overflow-auto {
   overflow: auto;
+}
+
+.o-0 {
+  opacity: 0;
+}
+
+.w-0 {
+  width: 0%;
 }
 
 .o-1 {
