--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -9,63 +9,72 @@ $appBg: white !default;
 $appBgDark: black !default;
 // color palette
 $colors: (
-  'primary': $primary,
-  'secondary': $secondary,
-  'accentLight': $accentLight,
-  'accentDark': $accentDark,
-  'appBg': $appBg,
-  'appBgDark': $appBgDark,
-  'error': $error,
-  'info': $info,
-  'blue': #1919e6,
-  'teal': teal,
-  'cyan': cyan,
-  'red': #e61919,
-  'pink': pink,
-  'yellow': #e6e619,
-  'green': #19e635,
-  'orange': #ffa600,
-  'purple': #9900ff,
-  'gray': #808080,
-  'black': black,
-  'white': white,
+  "primary": $primary,
+  "secondary": $secondary,
+  "accentLight": $accentLight,
+  "accentDark": $accentDark,
+  "appBg": $appBg,
+  "appBgDark": $appBgDark,
+  "error": $error,
+  "info": $info,
+  "blue": #1919e6,
+  "teal": teal,
+  "cyan": cyan,
+  "red": #e61919,
+  "pink": pink,
+  "yellow": #e6e619,
+  "green": #19e635,
+  "orange": #ffa600,
+  "purple": #9900ff,
+  "gray": #808080,
+  "black": black,
+  "white": white,
 ) !default;
 
 // flex
 $flex: (
-  'row': row,
-  'col': column,
+  "row": row,
+  "col": column,
 ) !default;
 $flexJust: (
-  'center': center,
-  'end': flex-end,
-  'start': flex-start,
-  'between': space-between,
-  'around': space-around,
-  'even': space-evenly,
-  'init': initial,
-  'inherit': inherit,
+  "center": center,
+  "end": end,
+  "start": start,
+  "between": space-between,
+  "around": space-around,
+  "even": space-evenly,
+  "init": initial,
+  "inherit": inherit,
 ) !default;
 $flexAlign: (
-  'center': center,
-  'end': flex-end,
-  'start': flex-start,
-  'base': baseline,
-  'stretch': stretch,
-  'init': initial,
-  'inherit': inherit,
+  "center": center,
+  "end": end,
+  "start": start,
+  "base": baseline,
+  "stretch": stretch,
+  "init": initial,
+  "inherit": inherit,
 ) !default;
 $alignContent: (
-  'center': center,
-  'end': flex-end,
-  'start': flex-start,
-  'between': space-between,
-  'around': space-around,
-  'even': space-evenly,
-  'init': initial,
-  'inherit': inherit,
-  'stretch': stretch,
+  "center": center,
+  "end": end,
+  "start": start,
+  "between": space-between,
+  "around": space-around,
+  "even": space-evenly,
+  "init": initial,
+  "inherit": inherit,
+  "stretch": stretch,
 ) !default;
+
+// position
+$position: (
+  "fixed": fixed,
+  "absolute": absolute,
+  "sticky": sticky,
+  "relative": relative,
+  "static": static,
+);
 // spacing
 $base-padding: 0.25rem !default;
 $base-margin: 0.5rem !default;
