--- a/src/styles/scss/_utilities.scss
+++ b/src/styles/scss/_utilities.scss
@@ -22,10 +22,10 @@ $utilities: (
   "box-shadow": (
     "prefix": "bs",
     "values": (
-      "default": 1px 2px 5px rgba(0, 0, 0, 0.4),
-      "strong": 5px 5px 10px rgba(0, 0, 0, 0.5),
-      "light": 1px 2px 5px rgba(255, 255, 255, 0.4),
-      "light-strong": 5px 5px 10px rgba(255, 255, 255, 0.5),
+      "default": 1px 2px 10px rgba(0, 0, 0, 0.6),
+      "strong": 2px 4px 15px rgba(0, 0, 0, 0.7),
+      "light": 1px 2px 10px rgba(255, 255, 255, 0.6),
+      "light-strong": 2px 4px 15px rgba(255, 255, 255, 0.7),
     ),
   ),
   "padding": (
@@ -244,6 +244,17 @@ $utilities: (
       "auto": auto,
     ),
   ),
+  "text-align": (
+    "prefix": "ta",
+    "values": (
+      "center": center,
+      "left": left,
+      "right": right,
+      "justify": justify,
+      "initial": initial,
+      "inherit": inherit,
+    ),
+  ),
 );
 
 // generate utility classes
@@ -257,10 +268,12 @@ $utilities: (
         #{$property}: $v;
       }
       .#{$prefix}x-#{$k} {
-        #{$property}: 0 $v 0 $v;
+        #{$property}-left: $v;
+        #{$property}-right: $v;
       }
       .#{$prefix}y-#{$k} {
-        #{$property}: $v 0 $v 0;
+        #{$property}-top: $v;
+        #{$property}-bottom: $v;
       }
     } @else if ($prefix == "r") {
       .#{$prefix}-#{$k} {
@@ -300,6 +313,9 @@ $utilities: (
   }
 }
 @for $i from 0 through 100 {
+  .transition-#{$i} {
+    transition: all math.div($i, 100) * 1s ease-in-out;
+  }
   .o-#{$i} {
     opacity: math.div($i, 100);
   }
@@ -315,11 +331,47 @@ $utilities: (
   .h-#{$i*5}px {
     height: $i * 5px;
   }
-  .vw-#{$i} {
+  .w-#{$i}vw {
     width: #{$i}vw;
   }
-  .vh-#{$i} {
+  .h-#{$i}vh {
     height: #{$i}vh;
+  }
+  .minw-#{$i} {
+    min-width: math.div($i, 100) * 100%;
+  }
+  .minw-#{$i*5}px {
+    min-width: $i * 5px;
+  }
+  .minw-#{$i}vw {
+    min-width: #{$i}vw;
+  }
+  .minh-#{$i} {
+    min-height: math.div($i, 100) * 100%;
+  }
+  .minh-#{$i*5}px {
+    min-height: $i * 5px;
+  }
+  .minh-#{$i}vh {
+    min-height: #{$i}vh;
+  }
+  .maxw-#{$i} {
+    max-width: math.div($i, 100) * 100%;
+  }
+  .maxw-#{$i*5}px {
+    max-width: $i * 5px;
+  }
+  .maxw-#{$i}vw {
+    max-width: #{$i}vw;
+  }
+  .maxh-#{$i} {
+    max-height: math.div($i, 100) * 100%;
+  }
+  .maxh-#{$i*5}px {
+    max-height: $i * 5px;
+  }
+  .maxh-#{$i}vh {
+    max-height: #{$i}vh;
   }
   .top-#{$i} {
     top: math.div($i, 100) * 100%;
